Fixed issues on bad user input